# etl-pyspark-demo

./: AGENTS.md  Dockerfile  README.md  docker-compose.yml  env_example  pyproject.toml  requirements.txt  teste.csv
.github/workflows/: app.yml  ci.yml
AGENTS/: data_engineer.md
datalake/: Cortex_04_03_2024-05_05_2024_historical_data_coinmarketcap.csv
jupyter/: Untitled.ipynb  spark.ipynb
src/: __main__.py
src/application/: base_handler.py  etl_usecase.py  icof.py  pipeline_context.py  usecase_handler_csv.py
src/domain/: extractor.py  loader.py  transformer.py
src/domain/adapters/: extractor.py  loader.py  transformer.py
src/domain/ports/: extractors.py  loaders.py  transformers.py
src/domain/quality/: __init__.py  fingerprint.py  gates.py  result.py  rules.py
src/infra/cli/: __main__.py
src/infra/data/: spark_conn.py
src/infra/data/adapters/: spark_conn.py
src/infra/data/ports/: engine.py
src/infra/orm/: cryto.py  db_sqlalchemy.py
src/infra/repository/: csv_file_repository.py
tests/: conftest.py
tests/integration/: _container_utils.py  test_minio_container.py  test_postgres_container.py  test_quality_pipeline_flow.py  test_testcontainers_nginx.py  test_usecase_handler_csv.py
tests/unit/: test_extractor.py  test_loader.py  test_quality_rules.py  test_repository_idempotency.py  test_spark_adapter.py  test_transformer.py
